{
    "name": "GridInput",
    "maps": [
        {
            "name": "GridActions",
            "id": "75f8fb06-7d83-45b4-a6ea-8b1f6aa9abb6",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "PassThrough",
                    "id": "a173fd64-c234-4cbb-9a54-db8a291565c6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "b4d775ba-9e30-43bc-a759-a90e19ab3dc0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotate",
                    "type": "Button",
                    "id": "a5134a9c-0849-4934-95f2-a0f776ebc838",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4cb0bcf1-7e1f-4348-9e4a-df5c5ec7fa82",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "02bb2b3d-c095-4a55-856e-b9cf8abbc39d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f2511efb-d763-4d56-8ed1-8bc0e863743f",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}